// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Details__Heading /> should render correctly 1`] = `
.c0 {
  margin: 0 5px 10px 5px;
}

<h3
  className="c0"
/>
`;

exports[`<Details__Item /> should render correctly 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-flexbox;
  display: inline-flex;
  width: 100%;
  padding: 5px;
}

<div
  className="c0"
/>
`;

exports[`<Details__Key /> should render correctly 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
/>
`;

exports[`<Details__Value /> should render correctly 1`] = `
.c0 {
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
}

<div
  className="c0"
/>
`;

exports[`<Details__Wrapper /> should render correctly 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 5px;
  padding: 15px;
  background: #ffffff;
  box-shadow: 0 0 3px #eaeaea;
}

<div
  className="c0"
/>
`;

exports[`Details should render correctly 1`] = `
<Details__Wrapper>
  <Details__Heading>
    Test Title
  </Details__Heading>
  <Details__Item
    key="activeStartDate"
  >
    <Details__Key>
      Start Date
    </Details__Key>
    <Details__Value>
      Test activeStartDate
    </Details__Value>
  </Details__Item>
  <Details__Item
    key="activeEndDate"
  >
    <Details__Key>
      End Date
    </Details__Key>
    <Details__Value>
      Test activeEndDate
    </Details__Value>
  </Details__Item>
  <Details__Item
    key="targetADGroup"
  >
    <Details__Key>
      Target Group(s)
    </Details__Key>
    <Details__Value>
      Test targetADGroup
    </Details__Value>
  </Details__Item>
  <Details__Item
    key="fileName"
  >
    <Details__Key>
      Attachment Name
    </Details__Key>
    <Details__Value>
      Test fileName
    </Details__Value>
  </Details__Item>
  <Details__Item
    key="ackStatement"
  >
    <Details__Key>
      Statement
    </Details__Key>
    <Details__Value>
      Test ackStatement
    </Details__Value>
  </Details__Item>
  <Details__Item
    key="detailsText"
  >
    <Details__Key>
      Details
    </Details__Key>
    <Details__Value>
      Test detailsText
    </Details__Value>
  </Details__Item>
</Details__Wrapper>
`;
